Added CreatePlayer() Added Menu Switch in MainTitle() Misc. small changes

--- a/SwordsNBastard_improved/SwordsNBastard_improved.csproj
+++ b/SwordsNBastard_improved/SwordsNBastard_improved.csproj
@@ -52,6 +52,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Player\ListPlayer.txt" />
     <Content Include="Player\player.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
